updated readme, added vector icon capability.

--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -1,9 +1,12 @@
 $black:  #000000;
+$blackShadow: rgba(0, 0, 0, 0.18);
 $grey90: #161616;
 $grey80: #262626;
-$grey70: #424242;
+$grey70: #464B54;
 
 $grey50: #808080;
+$grey20: #BDBDBD;
+$grey10: #D3D3D3;
 
 $white: #FFFFFF;
 
@@ -15,6 +18,6 @@ $orange:  #FF851B;
 $red:     #FF4136;
 $fuchsia: #F012BE;
 
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
-$base-font-family: 'Inconsolata', monospace;
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+$base-font-family: 'Nunito', monospace;
 $base-font: 16px/20px $base-font-family;
