--- a/WebApp/components/base.scss
+++ b/WebApp/components/base.scss
@@ -5,7 +5,7 @@
 
 body {
   color: $white;
-  background: $black;
+  background: $grey70;
   -webkit-font-smoothing: subpixel-antialiased;
   font: 16px/20px $base-font-family;
   padding: 4em 10vw;
