started adding the accountBar which is above the sieBar. leftSideBar is complete except for weird Icon bug (details in comment in code).

--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -3,7 +3,7 @@ $blackShadow: rgba(0, 0, 0, 0.18);
 $grey90: #161616;
 $grey80: #262626;
 $grey70: #464B54;
-
+$grey60: #616161;
 $grey50: #808080;
 $grey20: #BDBDBD;
 $grey10: #D3D3D3;
