--- a/WebApp/components/sideBar/sideBar.scss
+++ b/WebApp/components/sideBar/sideBar.scss
@@ -13,7 +13,7 @@
 
 .sidenav {
   height: 80%;
-  width: 15%;
+  width: 175px;
   position: fixed;
   z-index: 1;
   bottom: 0;
@@ -25,7 +25,7 @@
 
 .sideNavItems {
   margin-top: 10%;
-  width: auto;
+  width: 100%;
   height: 60%;
   display: grid;
 }
