--- a/WebApp/components/sideBarItem/sideBarItem.scss
+++ b/WebApp/components/sideBarItem/sideBarItem.scss
@@ -12,16 +12,24 @@
 **/
 
 .navItem {
+  height: auto;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
 }
 
 .itemLink {
   align-self: center;
-  justify-self: center;
+  justify-self: flex-end;
   text-decoration: none;
   font-size: 20px;
   font: $base-font-family;
   color: $grey20;
+  margin-left: 10%;
+}
+
+.itemIcon {
+  margin-left: 10%;
+  align-self: center;
+  justify-self: start;
 }
