--- a/WebApp/components/accountBarContent/accountBarContent.scss
+++ b/WebApp/components/accountBarContent/accountBarContent.scss
@@ -15,9 +15,15 @@
   align-self: center;
   width: 100%;
   height: auto;
+  display: flex;
+  justify-content: center;
 }
 
-button:hover {
-  cursor: crosshair;
-  color: $fuchsia;
+button {
+  box-shadow: 0px 0px 10px $blackShadow;
+  &:hover {
+    align-self: end;
+    cursor: crosshair;
+    color: $fuchsia;
+  }
 }
