this version is stable and without icons

--- a/WebApp/components/accountBar/accountBar.scss
+++ b/WebApp/components/accountBar/accountBar.scss
@@ -14,9 +14,9 @@
 .accountNav {
   position: fixed;
   display: flex;
-  top: 10%;
+  top: 75px;
   left: 0;
-  height: 10%;
+  height: 50px;
   width: 175px;
   background: $grey60;
 }
