--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -2,6 +2,7 @@ $black:  #000000;
 $blackShadow: rgba(0, 0, 0, 0.18);
 $grey90: #161616;
 $grey80: #262626;
+$grey75: #333333;
 $grey70: #464B54;
 $grey60: #616161;
 $grey50: #808080;
