added rightSideBar and rightAccountBar as well as some style. Changed naming conventions of some components.

--- a/WebApp/components/rightAccountBar/rightAccountBar.scss
+++ b/WebApp/components/rightAccountBar/rightAccountBar.scss
@@ -7,15 +7,15 @@
 
 @ Alec
 
-@ 2/21/18
+@ 2/26/18
 
 **/
 
-.accountNav {
+.rightAccountNav {
   position: fixed;
   display: flex;
-  top: 75px;
-  left: 0;
+  top: 50px;
+  right: 0;
   height: 50px;
   width: 175px;
   background: $grey60;
