--- a/WebApp/components/rightAccountBarContent/rightAccountBarContent.scss
+++ b/WebApp/components/rightAccountBarContent/rightAccountBarContent.scss
@@ -7,11 +7,11 @@
 
 @ Alec
 
-@ 2/21/18
+@ 2/26/18
 
 **/
 
-.accountNavContent {
+.rightAccountNavContent {
   align-self: center;
   width: 100%;
   height: auto;
