--- a/WebApp/components/base.scss
+++ b/WebApp/components/base.scss
@@ -11,8 +11,8 @@ body {
   padding: 4em 10vw;
   font-weight: 400;
 
-  // display: flex;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
 }
 
 h1, h2, h3, h4 {
