--- a/WebApp/components/rightSideBar/rightSideBar.scss
+++ b/WebApp/components/rightSideBar/rightSideBar.scss
@@ -11,11 +11,11 @@
 
 **/
 
-.sidenav {
+.rightsidenav {
   width: 175px;
   position: fixed;
-  z-index: 1;
-  top: 125px;
+  z-index: 2;
+  top: 100px;
   bottom: 0;
   right: 0;
   background: $grey70;
