--- a/WebApp/components/base.scss
+++ b/WebApp/components/base.scss
@@ -10,6 +10,7 @@ body {
   font: 16px/20px $base-font-family;
   padding: 4em 10vw;
   font-weight: 400;
+  height: auto;
 
   display: flex;
   flex-direction: row;
