--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -4,6 +4,7 @@ $grey90: #161616;
 $grey80: #262626;
 $grey75: #333333;
 $grey70: #464B54;
+$grey65: #525863;
 $grey60: #616161;
 $grey50: #808080;
 $grey20: #BDBDBD;
@@ -11,6 +12,7 @@ $grey10: #D3D3D3;
 
 $white: #FFFFFF;
 
+$brightGreen: #27AE60;
 $blue:    #0074D9;
 $aqua:    #7FDBFF;
 $lime:    #01FF70;
