--- a/WebApp/components/leftSideBarItem/leftSideBarItem.scss
+++ b/WebApp/components/leftSideBarItem/leftSideBarItem.scss
@@ -18,6 +18,7 @@ Purpose: Provides spacing for an individual row in the LeftSideBar
   width: 100%;
   display: flex;
   flex-direction: row;
+  font: $base-font-family;
 }
 
 .itemLink {
