Realigned all the links in the sidebar so that they are inline with the icons. Also made all the icons the same size (25x25) so that all the links line up. Also linked up the checkoutPage and made a small component to test it out.

--- a/WebApp/components/leftSideBarItem/leftSideBarItem.scss
+++ b/WebApp/components/leftSideBarItem/leftSideBarItem.scss
@@ -36,3 +36,17 @@ Purpose: Provides spacing for an individual row in the LeftSideBar
   align-self: center;
   justify-self: start;
 }
+
+a {
+  margin-left: 10%;
+  align-self: center;
+  font: $base-font-family;
+  text-decoration: none;
+  justify-self: start;
+  color: #BDBDBD;
+}
+
+a:hover {
+    color: #4285F4;
+    text-decoration: none;
+}
