--- a/WebApp/components/listingPic/listingPic.scss
+++ b/WebApp/components/listingPic/listingPic.scss
@@ -14,18 +14,18 @@ Purpose: Spacing and style for picture in a listing (top half)
 **/
 
 .listingPic {
-  background: #000000;
   width: 100%;
-  height: 60%;
+  height: 100%;
   text-align: center;
   border-radius: 5px;
   vertical-align: middle;
-  display: relative;
+  position: relative;
+  top: -25px;
 }
 
 .grumpy {
   margin-top: -250px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   z-index: 3;
 }
 
