--- a/WebApp/components/checkOutItem/checkOutItem.scss
+++ b/WebApp/components/checkOutItem/checkOutItem.scss
@@ -4,10 +4,17 @@
 @import '../animations';
 
 .checkOutItem {
-  text-align: center;
+  max-width: 500px;
+  margin: 100px;
+  margin-bottom: -5%;
+  padding: 25px;
+  height: 150px;
+  text-align: left;
+  position: relative;
+  left: 355px;
   width: 100%;
   flex: 3;
-  background: blue;
+  background: #525863;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
