--- a/WebApp/components/checkOutPage/checkOutPage.scss
+++ b/WebApp/components/checkOutPage/checkOutPage.scss
@@ -3,23 +3,10 @@
 @import '../mixins';
 @import '../animations';
 
-.header {
-	margin-top:10%;
-	text-align: center;
-	color: #FFFFFF;
+.row {
+  margin: 0;
+  padding: 1em 0;
+  border-bottom: 1px solid $grey90;
+  span:last-child { color: $fuchsia; }
+  &:first-child { margin-top: 4em; }
 }
-
-.checkOutTotal {
-	margin-top: 35%;
-	margin-left: 20%;
-	text-align: left;
-	width: 100%;
-	color: #FFFFFF;
-}
-
-body {
-	background-color: #4F4F4F;
-}
-
-
-
