--- a/WebApp/components/checkOutPage/checkOutPage.scss
+++ b/WebApp/components/checkOutPage/checkOutPage.scss
@@ -3,19 +3,49 @@
 @import '../mixins';
 @import '../animations';
 
+/**
+
+@ Nicholas 
+
+@ Date: 03/06/18
+
+Purpose: CSS file for styling checkOut page
+
+**/
+
 .header {
 	margin-top:10%;
 	text-align: center;
 	color: #FFFFFF;
+    max-height: 50px;
+
 }
 
 .checkOutTotal {
-	margin-top: 35%;
-	margin-left: 20%;
-	text-align: left;
-	width: 100%;
-	color: #FFFFFF;
+	position: absolute;
+	width: 69px;
+	height: 20px;
+    margin-left: 20%;
+	line-height: 20px;
 }
+
+.checkOutTotalValue {
+	position: absolute;
+	width: 200px;
+	height: 20px;
+	font-size: 29px;
+	color:$brightGreen;
+    margin-left: 24%;
+	line-height: 63px;
+}
+
+.purchaseButton {
+	position: absolute;
+	height: 20px;
+	line-height: 20px;
+    margin-left: 70%;
+}
+
 
 body {
 	background-color: #4F4F4F;
