Added more comments in files, and changed some components to have capital letters.

--- a/WebApp/components/forumsPage/forumsPage.scss
+++ b/WebApp/components/forumsPage/forumsPage.scss
@@ -3,6 +3,16 @@
 @import '../mixins';
 @import '../animations';
 
+/**
+
+@ Nicholas
+
+@ 03/04/2018
+
+Purpose: Styling for the forumsPage component
+
+**/
+
 h3 {
   text-align: center;
   line-height: 500px;
