--- a/WebApp/components/moreInfoPage/moreInfoPage.scss
+++ b/WebApp/components/moreInfoPage/moreInfoPage.scss
@@ -3,6 +3,16 @@
 @import '../mixins';
 @import '../animations';
 
+/**
+
+@ Nicholas
+
+@ 03/04/2018
+
+Purpose: Styling for the moreInfoPage component
+
+**/
+
 .row {
   margin: 0;
   padding: 1em 0;
