--- a/WebApp/components/promosPage/promosPage.scss
+++ b/WebApp/components/promosPage/promosPage.scss
@@ -3,6 +3,16 @@
 @import '../mixins';
 @import '../animations';
 
+/**
+
+@ Nicholas
+
+@ 03/04/2018
+
+Purpose: Styling for the promosPage component
+
+**/
+
 h3 {
   text-align: center;
   line-height: 500px;
