makePostPage component finished, up for review

--- a/WebApp/components/moreInfoListing/moreInfoListing.scss
+++ b/WebApp/components/moreInfoListing/moreInfoListing.scss
@@ -31,5 +31,5 @@ Purpose: Spacing and style for the listing description in the checkOut page
 }
 
 .description{
-  background:#FFF;
+  background: blue;
 }
