--- a/WebApp/components/makePost/makePost.scss
+++ b/WebApp/components/makePost/makePost.scss
@@ -5,15 +5,31 @@
 
 /**
 
-@ Nicholas
+@ Victoria
 
 @ 03/04/2018
 
-Purpose: Styling for the makePost component
+Purpose: Styling for the makePost Container component
 
 **/
 
-h3 {
-  text-align: center;
-  line-height: 500px;
+
+@import '../vars';
+@import '../reset';
+@import '../mixins';
+@import '../animations';
+
+/**
+
+@ Nicholas
+
+@ Date: 03/06/18
+
+Purpose: CSS file for styling checkOut page
+
+**/
+
+
+body {
+	background-color: #4F4F4F;
 }
