--- a/WebApp/components/listingContent/listingContent.scss
+++ b/WebApp/components/listingContent/listingContent.scss
@@ -16,7 +16,8 @@ Purpose: Spacing and style for the bottom half of a listing
 .listingContent {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
-  height: 40%;
+  height: 150px;
   border-radius: 0px 0px 5px 5px;
 }
