--- a/WebApp/components/listingContentButton/listingContentButton.scss
+++ b/WebApp/components/listingContentButton/listingContentButton.scss
@@ -17,7 +17,7 @@ Purpose: Spacing and style for the bottom half of a listing
   margin: 3px;
   background: $brightGreen;
   width: 50%;
+  text-align: center;
   align-self: center;
-  flex: 1;
   border-radius: 15px;
 }
