fixed some routing errors that I accidentally made

--- a/WebApp/components/moreInfoListing/moreInfoListing.scss
+++ b/WebApp/components/moreInfoListing/moreInfoListing.scss
@@ -13,7 +13,7 @@ Purpose: Spacing and style for the listing description in the checkOut page
 
 **/
 
-.moreInfoListing {
+.moreInfoListingPage {
   // height: auto;
   // width: auto;
   // bottom: 100px;
