Changed a lot of class -> className to avoid warning Changed moreInfoListing -> moreInfoListingPage Fixed some routing issues Fixed font refreshing issue

--- a/WebApp/components/trashPage/trashPage.scss
+++ b/WebApp/components/trashPage/trashPage.scss
@@ -15,5 +15,13 @@ Purpose: Styling for the trashPage component
 
 h3 {
   text-align: center;
-  line-height: 500px;
+  height: 100px;
+  width: 100%;
+  margin-top: 20%;
+}
+
+testComponent {
+	text-align: center;
+	height: 100px;
+	width: 100%
 }
