--- a/WebApp/components/walletPage/walletPage.scss
+++ b/WebApp/components/walletPage/walletPage.scss
@@ -14,7 +14,8 @@ Purpose: Styling for the walletPage component
 **/
 
 h3 {
-  text-align: center;
-  line-height: 500px;
+	font: 16px/20px $base-font-family;
+  	text-align: center;
+  	line-height: 500px;
 }
 
