--- a/WebApp/components/moreInfoListingRight/moreInfoListingRight.scss
+++ b/WebApp/components/moreInfoListingRight/moreInfoListingRight.scss
@@ -5,24 +5,24 @@
 
 /**
 
-@ Victoria
+@ Alec
 
-@ 3/4/18
+@ 3/9/18
 
-Purpose: Spacing and style for the listing description in the checkOut page
+Purpose: Spacing for the right side of the moreInfoListingPage
 
 **/
 
-.moreInfoListingPage {
+.moreInfoListingRight {
   // height: auto;
   // width: auto;
-  left: 175px;
+  left: 175;
   right: 175px;
   top: 50px;
-  bottom: 0px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  // padding-top: 375px;
+  // padding-left: 150px;
+  // padding-right: 20px;
+  // position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
