--- a/WebApp/components/checkOutPagePicture/checkOutPagePicture.scss
+++ b/WebApp/components/checkOutPagePicture/checkOutPagePicture.scss
@@ -14,13 +14,12 @@ Purpose: Spacing and styling for the checkout page image
 **/
 
 .checkOutPagePicture {
-  background: #000000;
-  width: 100%;
-  height: 60%;
-  text-align: center;
+  width: 350px;
+  height: auto;
+  // text-align: center;
   border-radius: 5px;
-  vertical-align: left;
-  display: relative;
+  // vertical-align: left;
+  // display: relative;
 }
 
 .grumpy {
