--- a/WebApp/components/checkOutTableItems/checkOutTableItems.scss
+++ b/WebApp/components/checkOutTableItems/checkOutTableItems.scss
@@ -15,14 +15,7 @@ Purpose: Styling for listing the items out on the listing page.
 
 .checkoutItems {
   height: auto;
-  width: auto;
-  bottom: 0;
-  left: 175px;
-  right: 175px;
-  top: 50px;
-  justify-content: space-around;
-  padding-top: 20px;
-  position: absolute;
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
+  align-items: center;
 }
