--- a/WebApp/components/rightAccountBar/rightAccountBar.scss
+++ b/WebApp/components/rightAccountBar/rightAccountBar.scss
@@ -18,6 +18,7 @@ Purpose: Provides spacing and styling to RightAccountBar
   display: flex;
   top: 50px;
   right: 0;
+  z-index: 2;
   height: 50px;
   width: 175px;
   background: $grey60;
