multiple changes. Dynamics moeInfoItem/{id} routing. Dynamic content filling of listingsPage. Props passing.

--- a/WebApp/components/listing/listing.scss
+++ b/WebApp/components/listing/listing.scss
@@ -17,8 +17,8 @@ Purpose: Spacing and style for a single listing in the grid
   min-width: 350px;
   max-width: 350px;
   flex: 1;
-  min-height: 350px;
-  max-height: 350px;
+  // min-height: 350px;
+  // max-height: 350px;
   background: $grey65;
   border-radius: 5px;
   display: flex;
