--- a/WebApp/components/listingContent/listingContent.scss
+++ b/WebApp/components/listingContent/listingContent.scss
@@ -18,6 +18,6 @@ Purpose: Spacing and style for the bottom half of a listing
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 150px;
+  height: auto;
   border-radius: 0px 0px 5px 5px;
 }
