--- a/WebApp/components/listingContentButton/listingContentButton.scss
+++ b/WebApp/components/listingContentButton/listingContentButton.scss
@@ -15,6 +15,8 @@ Purpose: Spacing and style for the bottom half of a listing
 
 .listingContentButton {
   margin: 3px;
+  color: white;
+  padding: 5px 0px 5px 0px;
   background: $brightGreen;
   width: 50%;
   text-align: center;
