--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingDesc/moreInfoListingDesc.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingDesc/moreInfoListingDesc.scss
@@ -17,4 +17,5 @@ Purpose: Spacing / Styling for the description in moreInfoPage
   background: $grey65;
   width: auto;
   border-radius: 5px;
+  padding: 5px;
 }
