--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingImg/moreInfoListingImg.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingImg/moreInfoListingImg.scss
@@ -16,6 +16,7 @@ Purpose: Spacing / Styling for the img in moreInfoPage
 .moreInfoListingImg {
   background: $grey65;
   width: auto;
-  margin-bottom: 5%;
+  height: auto;
+  margin-bottom: 3%;
   border-radius: 5px;
 }
