--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingItem.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingItem.scss
@@ -14,6 +14,7 @@ Purpose: Spacing / Styling for the img and desc of moreInfoPage
 **/
 
 .moreInfoListingItem {
+  height: auto;
   display: flex;
   flex-direction: column;
   width: 350px;
