--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
@@ -14,31 +14,36 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 **/
 
 .moreInfoListingSpec {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   justify-content: start;
-  height: 240px;
+  height: auto;
   width: 300px;
   margin-left: 5%;
-  padding-top: 5%;
+  // padding-top: 5%;
   // margin-top: 10%;
 }
 
 .titleAndPrice {
-  flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: auto;
   // padding-bottom: 5px;
 }
 
 .title {
+  flex: 2;
+  line-height: 35px;
   font-size: 35px;
+  height: auto;
 }
 
 .prices {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: flex-end;
 }
@@ -56,7 +61,8 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 }
 
 .shippingDetails {
-  flex: 1;
+  line-height: 14px;
+  margin-top: 5px;
   color: $offWhite;
   font-size: 12px;
   font-weight: 200;
@@ -70,7 +76,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 }
 
 .sellerAndRating {
-  flex: 1;
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -80,18 +86,21 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
 }
 
 .seller {
+  flex: 2;
   color: $lightBlue;
 }
 
 .rating {
+  flex: 1;
   color: $offWhite;
+  text-align: right;
 }
 
 .itemSpecsLine {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex: 1;
+  margin: 10px 0px;
 }
 
 .itemBtn {
