--- a/WebApp/components/listingPic/listingPic.scss
+++ b/WebApp/components/listingPic/listingPic.scss
@@ -14,13 +14,21 @@ Purpose: Spacing and style for picture in a listing (top half)
 **/
 
 .listingPic {
-  background: #000000;
   width: 100%;
   height: 60%;
   text-align: center;
   border-radius: 5px;
   vertical-align: middle;
   display: relative;
+}
+
+.imgLoading {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .grumpy {
