image logic for moreInfoListingPic

--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingDesc/moreInfoListingDesc.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingDesc/moreInfoListingDesc.scss
@@ -15,7 +15,7 @@ Purpose: Spacing / Styling for the description in moreInfoPage
 
 .moreInfoListingDesc {
   background: $grey65;
-  width: auto;
+  width: 100%;
   border-radius: 5px;
   padding: 5px;
 }
