--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingImg/moreInfoListingImg.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingImg/moreInfoListingImg.scss
@@ -15,8 +15,9 @@ Purpose: Spacing / Styling for the img in moreInfoPage
 
 .moreInfoListingImg {
   background: $grey65;
-  width: auto;
+  width: 350px;
   height: auto;
   margin-bottom: 3%;
+  padding: 5px;
   border-radius: 5px;
 }
