--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingItem.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingItem/moreInfoListingItem.scss
@@ -17,5 +17,6 @@ Purpose: Spacing / Styling for the img and desc of moreInfoPage
   height: auto;
   display: flex;
   flex-direction: column;
-  width: 350px;
+  align-items: center;
+  width: auto;
 }
