--- a/WebApp/components/makePostForm/makePostForm.scss
+++ b/WebApp/components/makePostForm/makePostForm.scss
@@ -113,6 +113,7 @@ Purpose: Styling for the makePostForm component
 	height: 30px;
 	width: 60px;
 	text-align: center;
+	vertical-align: middle;
 	line-height: 20px;
   margin-left: 70%;
   margin-top:480px;
