Adding logic to populate right sidebar with items

--- a/WebApp/components/rightSideBarItem/rightSideBarItem.scss
+++ b/WebApp/components/rightSideBarItem/rightSideBarItem.scss
@@ -18,3 +18,11 @@ Purpose: Style and spacing
   background: $grey65;
 
 }
+
+.rightSideBarItemTitle {
+	text-align: center;
+}
+
+.rightSideBarItemTotal{
+	text-align: center;
+}
