--- a/WebApp/components/topBar/topBar.scss
+++ b/WebApp/components/topBar/topBar.scss
@@ -20,6 +20,7 @@ Purpose: Provides styling to the TopBar component
   width: 100%;
   position: fixed;
   z-index: 1;
+  align-items: center;
   top: 0;
   left: 0;
   background: $grey75;
@@ -34,6 +35,17 @@ Purpose: Provides styling to the TopBar component
   border-radius: 10px;
   @box-shadow(0 2 10 10 $black);
   background: $fuchsia;
+}
+
+.registerBtn {
+  height: 30px;
+  width: 150px;
+  text-align: center;
+  vertical-align: center;
+  align-self: center;
+  border-radius: 10px;
+  @box-shadow(0 2 10 10 $black);
+  background: $aqua;
 }
 
 .logo {
@@ -61,4 +73,18 @@ Purpose: Provides styling to the TopBar component
   width: 100%;
   background: $grey70;
   color: $grey50;
+}
+
+input[type=text] {
+  width: 75px;
+  height: 30px;
+  background: white;
+  color: black;
+  border-radius: 10px;
+}
+
+.formGroup {
+  background: $fuchsia;
+  display: flex;
+  flex-direction: row;
 }
