added some finishing touches to the front end. Everything seems stable and is ready for backend integration

--- a/WebApp/components/moreInfoListingPage/moreInfoListingTop/moreInfoListingTop.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingTop/moreInfoListingTop.scss
@@ -21,3 +21,7 @@ Purpose: Spacing for the top of the moreInfoListingPage
   height: 55px;
   margin-bottom: 10%;
 }
+
+.navLinkBackBtn {
+  margin-left: 15px;
+}
