some finishing touches

--- a/WebApp/components/listing/listing.scss
+++ b/WebApp/components/listing/listing.scss
@@ -17,6 +17,7 @@ Purpose: Spacing and style for a single listing in the grid
   min-width: 350px;
   max-width: 350px;
   flex: 1;
+  height: auto;
   // min-height: 350px;
   // max-height: 350px;
   background: $grey65;
