--- a/WebApp/components/makePostForm/makePostFormNew.scss
+++ b/WebApp/components/makePostForm/makePostFormNew.scss
@@ -110,6 +110,10 @@ Purpose: Styling for the makePostForm component
   width: 100%;
 }
 
+.navLinkSubmitBtn {
+  margin-left: 0px;
+}
+
 input[type=submit] {
   color: $lightBlue;
   &:hover {
@@ -119,7 +123,7 @@ input[type=submit] {
 
 input[type=text] {
   width: 100%;
-  background: $grey65;
+  background: $grey60;
   padding: 5px;
   border-radius: 10px;
 }
