fixing file path errors for dependencies

--- a/WebApp/components/checkOutPage/checkOutPageTotalValue/checkOutPageTotalValue.scss
+++ b/WebApp/components/checkOutPage/checkOutPageTotalValue/checkOutPageTotalValue.scss
@@ -1,11 +1,11 @@
-@import '../vars';
-@import '../reset';
-@import '../mixins';
-@import '../animations';
+@import '../../vars';
+@import '../../reset';
+@import '../../mixins';
+@import '../../animations';
 
 /**
 
-@ Nicholas 
+@ Nicholas
 
 @ Date: 03/06/18
 
