modal up and running

--- a/WebApp/components/checkOutPage/checkOutPage.scss
+++ b/WebApp/components/checkOutPage/checkOutPage.scss
@@ -96,6 +96,9 @@ Purpose: CSS file for styling checkOut page
 	width: 200px;
 	border-radius: 10px;
 	display: flex;
+	&:hover{
+		cursor: pointer;
+	}
 	flex-direction: column;
 	justify-content: center;
 	background: $brightGreen;
@@ -107,6 +110,32 @@ Purpose: CSS file for styling checkOut page
 	width: auto;
 }
 
+.modalText {
+	color: black;
+	margin: 12% 0% 0% 0%;
+}
+
+.submitButton {
+	padding: 5px;
+	margin-top: 5%;
+	text-align: center;
+	&:hover {
+		cursor: pointer;
+	}
+	width: 50%;
+	background: $neoGreen;
+	border-radius: 5px;
+}
+
+.passwordLabel {
+	// text-align: center;
+	margin-bottom: 2%;
+}
+
+.passwordInput {
+	background: $offWhite;
+	border-radius: 3px;
+}
 
 // body {
 // 	background-color: #4F4F4F;
