--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -10,6 +10,16 @@ $grey50: #828282;
 $grey20: #BDBDBD;
 $grey10: #D3D3D3;
 
+$grey30: #23303A;
+$greyRegisterBackground: #23303A;
+
+$inputFieldDefault: #96DCC6;
+$tigersEyeOrange: #E58E32;
+$japaneseIndigoDarkBlue: #27435F;
+$registerButtonOrange: #EDB200;
+$profileSquareGreen: #00A776;
+$loginPageGreen: #57BF01;
+
 $offWhite: #E0E0E0;
 $white: #FFFFFF;
 
