--- a/WebApp/components/leftAccountBar/leftAccountBarContent/leftAccountBarContent.scss
+++ b/WebApp/components/leftAccountBar/leftAccountBarContent/leftAccountBarContent.scss
@@ -22,10 +22,10 @@
 }
 
 .profileText {
-  margin-bottom: 25px;
   margin-left: 10px;
   font-size: 25px;
   font-weight: 200;
+  color: white;
 }
 
 .downArrowIcon {
