--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -17,7 +17,7 @@ Purpose: Styling for the register page
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	background-color: $greyRegisterBackground;
 }
 
@@ -36,9 +36,10 @@ Purpose: Styling for the register page
 .registerFormContainer{
 	display: flex;
 	flex-direction: column;
-	height: 50%;
+	height: 80%;
 	width: 80%;
 	margin: 25% 10% 0% 25%;
+	overflow: auto;
 }
 
 .fullNameContainer{
@@ -114,6 +115,7 @@ Purpose: Styling for the register page
 .registerButtonContainer {
 	display: flex;
 	margin: 2% 8% 2% 65%;
+	overflow: auto;
 }
 
 .registerPageButton{
