--- a/WebApp/components/myProfilePage/myProfilePage.scss
+++ b/WebApp/components/myProfilePage/myProfilePage.scss
@@ -18,6 +18,19 @@
 .tabs-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 5% 20% 0% 20%;
+  justify-content: space-around;
+  margin: 25px 0% 0% 0%;
+}
+
+.tab {
+  text-align: center;
+  line-height: 50px;
+  font-size: 30px;
+  width: 100%;
+  height: 50px;
+  border: 2px solid $japaneseIndigoDarkBlue;
+  background: $japaneseIndigoDarkBlue;
+  &:hover {
+    background: none;
+  }
 }
