--- a/WebApp/components/myProfilePage/myProfilePage.scss
+++ b/WebApp/components/myProfilePage/myProfilePage.scss
@@ -28,9 +28,13 @@
   font-size: 30px;
   width: 100%;
   height: 50px;
-  border: 2px solid $japaneseIndigoDarkBlue;
   background: $japaneseIndigoDarkBlue;
+  -o-transition: background 0.5s ease-in;
+  -ms-transition: background 0.5s ease-in;
+  -moz-transition: background 0.5s ease-in;
+  -webkit-transition: background 0.5s ease-in;
+  transition: background 0.5s ease-in;
   &:hover {
-    background: none;
+    background: $tigersEyeOrange;
   }
 }
