--- a/WebApp/components/myProfilePage/listingsTab/listingsTab.scss
+++ b/WebApp/components/myProfilePage/listingsTab/listingsTab.scss
@@ -2,3 +2,18 @@
 @import '../../reset';
 @import '../../mixins';
 @import '../../animations';
+
+.listings {
+  height: auto;
+  width: 100%;
+  justify-content: space-around;
+  padding-top: 20px;
+  position: absolute;
+  display: flex;
+  flex-flow: row wrap;
+  z-index: 0;
+}
+
+.navLink {
+  margin: 20px 20px 20px 20px;
+}
