changing color scheme

--- a/WebApp/components/base.scss
+++ b/WebApp/components/base.scss
@@ -5,7 +5,7 @@
 
 body {
   color: $white;
-  background: $grey70;
+  background:  #081016;
   -webkit-font-smoothing: subpixel-antialiased;
   font: 16px/20px $base-font-family;
   font-weight: 400;
