--- a/WebApp/components/leftSideBar/leftSideBar.scss
+++ b/WebApp/components/leftSideBar/leftSideBar.scss
@@ -20,7 +20,7 @@ Purpose: Provides styling and spacing to LeftSideBar
   top: 100px;
   bottom: 0;
   left: 0;
-  background: $grey70;
+  background: #23303A;
   overflow-x: hidden;
   box-shadow: 0px 9px 18px $blackShadow;
 }
