--- a/WebApp/components/topBar/topBar.scss
+++ b/WebApp/components/topBar/topBar.scss
@@ -23,7 +23,7 @@ Purpose: Provides styling to the TopBar component
   align-items: center;
   top: 0;
   left: 0;
-  background: $grey75;
+  background: #05161C;
 }
 
 .logo {
