--- a/WebApp/components/myProfilePage/walletTab/walletTab.scss
+++ b/WebApp/components/myProfilePage/walletTab/walletTab.scss
@@ -13,15 +13,50 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
-.walletTop {
-  width: 20%;
-  height: auto;
+.photoImportName {
+  width: 210px;
+  height: 185px;
+  margin: 10% 0%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
-.walletBottom {
-  width: 60%;
+.photoName {
+  display: flex;
+  flex-direction: column;
+}
+
+.photo {
+  width: 150px;
+  height: 150px;
+  border-radius: 5px;
+  background: $japaneseIndigoDarkBlue;
+}
+
+.name {
+  width: 150px;
+  height: 25px;
+  margin-top: 10px;
+}
+
+.importIcon {
+  width: 50px;
+  height: 50px;
+  margin: 0px 0px 35px 10px;
+}
+
+.topBottomContainer {
+  width: 100%;
   height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.walletForm {
+  width: 500px;
+  background: $fuchsia;
 }
