--- a/WebApp/components/rightAccountBar/rightAccountBar.scss
+++ b/WebApp/components/rightAccountBar/rightAccountBar.scss
@@ -21,5 +21,5 @@ Purpose: Provides spacing and styling to RightAccountBar
   z-index: 2;
   height: 50px;
   width: 175px;
-  background: #081F27;
+  background: $lessBlack;
 }
