--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -1,5 +1,6 @@
 $black:  #000000;
 $blackShadow: rgba(0, 0, 0, 0.18);
+$lessBlack: #081F27;
 $grey90: #161616;
 $grey80: #262626;
 $grey75: #333333;
@@ -24,6 +25,7 @@ $offWhite: #E0E0E0;
 $white: #FFFFFF;
 
 $lightBlue: #2F80ED;
+$highlightBlue: #4285F4;
 $brightGreen: #27AE60;
 $neoGreen: #769333;
 $blue:    #0074D9;
