--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -16,7 +16,7 @@ $greyRegisterBackground: #23303A;
 $inputFieldDefault: #96DCC6;
 $tigersEyeOrange: #E58E32;
 $japaneseIndigoDarkBlue: #27435F;
-$registerButtonOrange: #EDB200;
+$registerButtonOrange: #E2AC09;
 $profileSquareGreen: #00A776;
 $loginPageGreen: #57BF01;
 
