another proposed color scheme, w/ only 3 background colors

--- a/WebApp/components/base.scss
+++ b/WebApp/components/base.scss
@@ -5,7 +5,7 @@
 
 body {
   color: $white;
-  background:  #081016;
+  background:  $black90;
   -webkit-font-smoothing: subpixel-antialiased;
   font: 16px/20px $base-font-family;
   font-weight: 400;
