--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -1,6 +1,6 @@
 $black:  #000000;
 $blackShadow: rgba(0, 0, 0, 0.18);
-$lessBlack: #081F27;
+$black90: #081F27;
 $grey90: #161616;
 $grey80: #262626;
 $grey75: #333333;
