--- a/WebApp/components/listingsPage/listing/listingContent/listingContentButton/listingContentButton.scss
+++ b/WebApp/components/listingsPage/listing/listingContent/listingContentButton/listingContentButton.scss
@@ -17,7 +17,7 @@ Purpose: Spacing and style for the bottom half of a listing
   margin: 3px;
   color: white;
   padding: 5px 0px 5px 0px;
-  background: $brightGreen;
+  background: $loginPageGreen;
   width: 50%;
   text-align: center;
   align-self: center;
