--- a/WebApp/components/loginRegister/loginRegister.scss
+++ b/WebApp/components/loginRegister/loginRegister.scss
@@ -69,8 +69,8 @@ Purpose: Styling for loginRegister page
 	display: flex;
 	height: 60px;
 	width: 225px;
-	background: $brightGreen;
-	border-radius: 10px;
+	background: $loginPageGreen;
+	border-radius: 5px;
 }
 
 .registerButtonText {
@@ -112,7 +112,7 @@ Purpose: Styling for loginRegister page
 	font-size: 28px;
 	width: 75%;
 	margin: center;
-	border-bottom: solid #eeeeee 1px;
+	border-bottom: solid #eeeeee 2px;
 	font-weight: lighter;
 }
 
@@ -125,7 +125,7 @@ Purpose: Styling for loginRegister page
 	font-size: 28px;
 	width: 75%;
 	margin: center;
-	border-bottom: solid #eeeeee 1px;
+	border-bottom: solid #eeeeee 2px;
 	font-weight: lighter;
 }
 
