--- a/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
+++ b/WebApp/components/myProfilePage/purchasesTab/purchasesTab.scss
@@ -13,31 +13,12 @@ Purpose: Styling for the myPurchasesTab component
 
 **/
 .purchasesPageContainer {
-	position: absolute;
-	top: 50px;
-	left: 175px;
-	right: 175px;
-	bottom: 0px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-.header {
-	min-height: 25%;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	font-size: 50px;
-	margin-top: 100px;
-}
-
-.underline {
-	min-height: 2px;
-	margin-top: 3%;
-	min-width: 50%;
-	background: $white;
+	// width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  font-weight: 200;
+	// background: $fuchsia;
+	padding: 2% 5% 2% 5%;
 }
