--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -20,6 +20,7 @@ $japaneseIndigoDarkBlue: #27435F;
 $registerButtonOrange: #E2AC09;
 $profileSquareGreen: #00A776;
 $loginPageGreen: #57BF01;
+$jadeGreen: #536477;
 
 $offWhite: #E0E0E0;
 $white: #FFFFFF;
