--- a/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
+++ b/WebApp/components/moreInfoListingPage/moreInfoListingBottom/moreInfoListingSpec/moreInfoListingSpec.scss
@@ -17,7 +17,7 @@ Purpose: Spacing for the specifications of an item in moreInfoPage
   margin-top: 5%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  // justify-content: start;
   height: auto;
   width: 300px;
   margin-left: 5%;
