more color changes, made colors used more consistent

--- a/WebApp/components/checkOutPage/checkOutPage.scss
+++ b/WebApp/components/checkOutPage/checkOutPage.scss
@@ -73,7 +73,7 @@ Purpose: CSS file for styling checkOut page
 
 .checkOutTotalValue {
 	font-weight: 200;
-	color: $neoGreen;
+	color: $brightGreen;
 	// margin-left: 5%;
 }
 
@@ -123,7 +123,7 @@ Purpose: CSS file for styling checkOut page
 		cursor: pointer;
 	}
 	width: 50%;
-	background: $neoGreen;
+	background: $brightGreen;
 	border-radius: 5px;
 }
 
