--- a/WebApp/components/filterDropdown/filterDropdownContent/filterDropdownContent.scss
+++ b/WebApp/components/filterDropdown/filterDropdownContent/filterDropdownContent.scss
@@ -15,7 +15,7 @@ Purpose: styling and Spacing
 .filterDropdownContent {
   display: flex;
   z-index: 3;
-  background: $grey75;
+  background: $greyRegisterBackground;
   width: 100%;
   opacity: 0.75;
 }
