--- a/WebApp/components/vars.scss
+++ b/WebApp/components/vars.scss
@@ -1,23 +1,19 @@
 $black:  #000000;
 $blackShadow: rgba(0, 0, 0, 0.18);
 $black90: #081F27;
-$grey90: #161616;
-$grey80: #262626;
-$grey75: #333333;
-$grey70: #464B54;
+
 $grey65: #525863;
 $grey60: #616161;
 $grey50: #828282;
+$grey30: #23303A;
 $grey20: #BDBDBD;
 $grey10: #D3D3D3;
-
-$grey30: #23303A;
 $greyRegisterBackground: #23303A;
 
 $inputFieldDefault: #96DCC6;
-$tigersEyeOrange: #E58E32;
-$japaneseIndigoDarkBlue: #27435F;
+
 $registerButtonOrange: #E2AC09;
+
 $profileSquareGreen: #00A776;
 $loginPageGreen: #57BF01;
 $jadeGreen: #536477;
@@ -27,8 +23,11 @@ $white: #FFFFFF;
 
 $lightBlue: #2F80ED;
 $highlightBlue: #4285F4;
+$japaneseIndigoDarkBlue: #27435F;
+
 $brightGreen: #27AE60;
-$neoGreen: #769333;
+$neoGreen: #57BF01;
+
 $blue:    #0074D9;
 $aqua:    #7FDBFF;
 $lime:    #01FF70;
