--- a/WebApp/components/myProfilePage/myProfilePage.scss
+++ b/WebApp/components/myProfilePage/myProfilePage.scss
@@ -28,14 +28,14 @@
   font-size: 30px;
   width: 100%;
   height: 50px;
-  background: $japaneseIndigoDarkBlue;
+  background: $jadeGreen;
   -o-transition: background 0.3s ease-in;
   -ms-transition: background 0.3s ease-in;
   -moz-transition: background 0.3s ease-in;
   -webkit-transition: background 0.3s ease-in;
   transition: background 0.3s ease-in;
   &:hover {
-    background: $tigersEyeOrange;
+    background: $registerButtonOrange;
     cursor: pointer;
   }
 }
