--- a/WebApp/components/myProfilePage/walletTab/walletTab.scss
+++ b/WebApp/components/myProfilePage/walletTab/walletTab.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   font-size: 25px;
   font-weight: 200;
-  color: $inputFieldDefault;
+  color: $neoGreen;
 }
 
 .photoImportName {
