--- a/WebApp/components/leftSideBar/leftSideBarItem/leftSideBarItem.scss
+++ b/WebApp/components/leftSideBar/leftSideBarItem/leftSideBarItem.scss
@@ -50,3 +50,10 @@ a:hover {
     color: #4285F4;
     text-decoration: none;
 }
+
+.LogoutButton {
+  width: 100%;
+  height: 100%;
+  background: $registerButtonOrange;
+  color: $offWhite;
+}
