--- a/WebApp/components/leftSideBar/leftSideBar.scss
+++ b/WebApp/components/leftSideBar/leftSideBar.scss
@@ -31,3 +31,28 @@ Purpose: Provides styling and spacing to LeftSideBar
   height: 60%;
   display: grid;
 }
+
+.sideNavLogout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.LogoutButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+  height: 5%;
+  background: $registerButtonOrange;
+  color: $white;
+  border-radius: 5px;
+}
+
+.LogoutButtonText {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
