--- a/WebApp/components/leftSideBar/leftSideBar.scss
+++ b/WebApp/components/leftSideBar/leftSideBar.scss
@@ -14,6 +14,10 @@ Purpose: Provides styling and spacing to LeftSideBar
 **/
 
 .sidenav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 175px;
   position: fixed;
   z-index: 1;
@@ -30,4 +34,18 @@ Purpose: Provides styling and spacing to LeftSideBar
   width: 100%;
   height: 60%;
   display: grid;
+}
+
+.logoutBtn {
+  width: 80%;
+  height: 30px;
+  margin-bottom: 10%;
+  line-height: 30px;
+  font-size: 20px;
+  border-radius: 5px;
+  text-align: center;
+  background: $registerButtonOrange;
+  &:hover {
+    cursor: pointer;
+  }
 }
