--- a/WebApp/components/leftSideBar/leftSideBar.scss
+++ b/WebApp/components/leftSideBar/leftSideBar.scss
@@ -38,6 +38,7 @@ Purpose: Provides styling and spacing to LeftSideBar
   justify-content: center;
   width: 100%;
   height: 100%;
+  margin-top: 120%;
 }
 
 .LogoutButton {
