--- a/WebApp/components/loginRegister/register/register.scss
+++ b/WebApp/components/loginRegister/register/register.scss
@@ -147,11 +147,23 @@ Purpose: Styling for the register page
 	font-weight: lighter;
 }
 
+.photoContainer {
+  width: 250px;
+  background: $greyRegisterBackground;
+  padding: 5px;
+}
+
+.imgDefault {
+  height: 250px;
+  width: 200px;
+}
+
 .importProfilePictureContainer{
 	display: flex;
 	flex-direction: column;
+  align-items: center;
 	width: 370px;
-	height: 400px;
+	height: 450px;
 	background-color: $profileSquareGreen;
 	border-radius: 4px;
 	margin: 25% 0% 0% 8%;
@@ -160,9 +172,9 @@ Purpose: Styling for the register page
 .profilePictureCaption{
 	display: flex;
 	font-size: 24px;
-	margin: 10% 20% 5% 27%;
+	margin: 10% 0% 5% 0%;
 }
 
 .importPhotoIconContainer{
-	margin: 0% 10% 0% 40%;
+  margin: 5% 0%;
 }
