--- a/WebApp/components/leftAccountBar/leftAccountBar.scss
+++ b/WebApp/components/leftAccountBar/leftAccountBar.scss
@@ -21,4 +21,5 @@ Purpose: Provides styling and spacing for LeftAccountBar
   height: 50px;
   width: 175px;
   background: $greyRegisterBackground;
+  box-shadow: 0px 9px 18px $blackShadow;
 }
