--- a/WebApp/components/topBar/topBar.scss
+++ b/WebApp/components/topBar/topBar.scss
@@ -13,6 +13,10 @@ Purpose: Provides styling to the TopBar component
 
 **/
 
+.main-container {
+  // z-index: 3;
+}
+
 .topnav {
   display: flex;
   justify-content: space-between;
@@ -27,20 +31,76 @@ Purpose: Provides styling to the TopBar component
   box-shadow: 0px 9px 18px $blackShadow;
 }
 
+.filter-flow {
+  position: fixed;
+  top: 50px;
+  right: 40px;
+  height: 10px;
+  width: 10px;
+  z-index: 1;
+  background: white;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.filter-menu {
+  position: fixed;
+  top: 60px;
+  right: 40px;
+  width: 150px;
+  height: 120px;
+  background: white;
+  border-radius: 5px 0px 5px 5px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-title, .filter-description, .filter-price {
+  flex: 1;
+  color: black;
+  line-height: 40px;
+  text-align: center;
+}
+
+.filter-title, .filter-description {
+  border-bottom: 1px solid $grey10;
+}
+
+.filter-title {
+  border-radius: 5px 0px 0px 0px;
+}
+
+.filter-price {
+  border-radius: 0px 0px 5px 5px;
+}
+
 .logo {
   align-self: center;
   margin-left: 3%;
 }
 
 .search {
-  width: 20%;
+  width: 300px;
   display: flex;
-  margin-right: 2%;
+  flex-direction: row;
+  margin-right: 30px;
   align-items: center;
 }
 
+.filter {
+  height: 30px;
+  margin-left: 2%;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .searchicon {
-  margin-right: 3%;
+  margin-right: 2%;
+  width: 55px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .searchbubble {
@@ -48,8 +108,11 @@ Purpose: Provides styling to the TopBar component
   padding-left: 5%;
   align-items: center;
   border-radius: 25px;
-  height: 60%;
+  height: 30px;
   width: 100%;
   background: #536477;
   color: $offWhite;
+  &:hover {
+    cursor: pointer;
+  }
 }
