some more changes

--- a/WebApp/components/topBar/topBar.scss
+++ b/WebApp/components/topBar/topBar.scss
@@ -114,6 +114,6 @@ Purpose: Provides styling to the TopBar component
   background: #536477;
   color: $offWhite;
   &:hover {
-    cursor: pointer;
+    cursor: text;
   }
 }
